--- a/notebooks/lud_eda.ipynb
+++ b/notebooks/lud_eda.ipynb
@@ -774,7 +774,186 @@
    "id": "3a7a4c2d-ee32-40b3-b330-2e7089826a1c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_temp = df.head(10000)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "44941c9f",
+   "metadata": {},
+   "source": [
+    "! pip install networkx\n",
+    "import networkx as nx\n",
+    "G = nx.MultiGraph()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e8a9cf65",
+   "metadata": {},
+   "source": [
+    "df[\"Account\"].unique()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e743e036",
+   "metadata": {},
+   "source": [
+    "# Add nodes to the graph for each unique card_id, merchant_name\n",
+    "G.add_nodes_from(df[\"Account\"].unique(), type='Account')\n",
+    "G.add_nodes_from(df[\"Account.1\"].unique(), type='Account.1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e657464f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for _, row in df.iterrows():\n",
+    "    # Create a variable for each properties for each edge\n",
+    "    \n",
+    "        year = row[\"Year\"],\n",
+    "        month = row[\"Month\"],\n",
+    "        day = row[\"Day\"],\n",
+    "        hour = row[\"Hour\"],\n",
+    "        minute =row[\"Minute\"],\n",
+    "        amount_paid = row[\"Amount Paid USD\"],\n",
+    "        currency_code =  row[\"Currency Code\"],\n",
+    "        payment_format = row[\"Payment Format\"]\n",
+    "    \n",
+    " \n",
+    "        G.add_edge(row['Account'], row['Account.1'], year = year , month = month , day = day ,\n",
+    "              hour = hour , minute = minute , amount_paid = amount_paid , currency_code = currency_code ,\n",
+    "              payment_format = payment_format)\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b21c0b21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the number of nodes and edges in the graph\n",
+    "num_nodes = G.number_of_nodes()\n",
+    "num_edges = G.number_of_edges()\n",
+    "\n",
+    "# Print the number of nodes and edges\n",
+    "print(\"Number of nodes:\", num_nodes)\n",
+    "print(\"Number of edges:\", num_edges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfa41530",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the graph to an adjacency matrix\n",
+    "adj_matrix = nx.adjacency_matrix(G).todense()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "150ab6c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adj_matrix.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36b682b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get a small sample of the nodes in the graph\n",
+    "sample_nodes = list(G.nodes())[:10]\n",
+    "\n",
+    "# Retrieve the properties of the sample nodes\n",
+    "node_properties = nx.get_node_attributes(G, 'type')\n",
+    "\n",
+    "# Print the properties of the sample nodes\n",
+    "for node in sample_nodes:\n",
+    "    print(f\"Node: {node}, Properties: {node_properties[node]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a65bdf15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_size = 5\n",
+    "for i, edge in enumerate(G.edges()):\n",
+    "    print(G.get_edge_data(*edge))\n",
+    "    if i >= sample_size - 1:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "498d89d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import collections\n",
+    "# Retrieve the properties errors of all the edges\n",
+    "edge_properties = nx.get_edge_attributes(G, 'errors')\n",
+    "\n",
+    "# Count the number of edges by property value\n",
+    "edge_count_by_property = collections.Counter(edge_properties.values())\n",
+    "\n",
+    "# Print the count of edges by property value\n",
+    "for property_value, count in edge_count_by_property.items():\n",
+    "    print(f\"Property value: {property_value}, Count: {count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d42cb78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare the data for input into the model\n",
+    "edge_list = list(G.edges(data=True))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc860b5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(edge_list[i][2].values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "267fe097",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = nx.complete_graph(sample_nodes)\n",
+    "nx.draw(G)"
+   ]
   }
  ],
  "metadata": {
