fixed some small errors

--- a/notebooks/lud_eda.ipynb
+++ b/notebooks/lud_eda.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "id": "6815b5a0-c315-4ff2-85b1-19ff9426db24",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "id": "7d80ad96-fd33-463f-bfa7-ff0c1e48d266",
    "metadata": {
     "editable": true,
@@ -36,12 +36,12 @@
    },
    "outputs": [],
    "source": [
-    " df= pd.read_csv('/Users/ludwingmoncadabellorin/code/Malvinrud/aml_detector/raw_data/HI-Small_Trans.csv')"
+    " df= pd.read_csv('/Users/Malte/code/Malvinrud/aml_detector/HI-Small_Trans.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 5,
    "id": "82c20062-2cc5-4040-9c7b-7030ee240a1b",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 6,
    "id": "3704f756-6cb7-4af8-90ac-1a2829f704fa",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 7,
    "id": "6c674260-dd3c-4ade-bbdd-90e908ce8e37",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "id": "e3df5d45-3c9b-40ff-bd08-c46590a03901",
    "metadata": {
     "scrolled": true
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 9,
    "id": "d2bce668-8815-439c-8869-815e2063c0df",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 10,
    "id": "8e4cb131-3f66-4970-bf77-a32ef2be7e2c",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 11,
    "id": "6404f3bc-917b-4b5c-a453-aff2c7d31fe3",
    "metadata": {
     "editable": true,
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 12,
    "id": "476c8538-66a2-4a32-8c71-586472795c01",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "4   Reinvestment              0  2022      9    1     0       6  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 13,
    "id": "2dc25f3a-0ac0-49b6-b4dc-e2d9a7565784",
    "metadata": {},
    "outputs": [],
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 19,
    "id": "8288f096-da03-4ec7-b12e-1ad94dc14fd5",
    "metadata": {
     "scrolled": true
@@ -490,6 +490,7 @@
     }
    ],
    "source": [
+    "import requests\n",
     "# Get the exchange rate for all the currencies by connecting to Exchange Rate Data API\n",
     "\n",
     "# Exchange rate data api key\n",
@@ -524,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 20,
    "id": "d3e18559-a3a4-4e2d-aa87-13e9bf1f3d0c",
    "metadata": {},
    "outputs": [],
@@ -538,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 21,
    "id": "f3989e0c-2af0-453a-be6f-aa4659540634",
    "metadata": {},
    "outputs": [],
@@ -550,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 22,
    "id": "c14dda5e-91bf-43a4-9748-b47aa0cbd297",
    "metadata": {
     "scrolled": true
@@ -749,7 +750,7 @@
        "4   1.0         36682.97             36682.97  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,17 +761,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 24,
    "id": "46eb6089-2452-4012-a2f1-9db33fb29bf0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('new_hi_small_trans.csv', index=False)\n"
+    "#df.to_csv('new_hi_small_trans.csv', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "3a7a4c2d-ee32-40b3-b330-2e7089826a1c",
    "metadata": {},
    "outputs": [],
@@ -779,21 +780,47 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "44941c9f",
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "8062c6f8",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: networkx in /Users/Malte/.pyenv/versions/3.10.6/envs/aml_detector/lib/python3.10/site-packages (3.1)\n"
+     ]
+    }
+   ],
    "source": [
     "! pip install networkx\n",
     "import networkx as nx\n",
-    "G = nx.MultiGraph()"
+    "G = nx.MultiGraph()\n",
+    "\n",
+    "# Add nodes to the graph for each unique card_id, merchant_name\n",
+    "G.add_nodes_from(df[\"card_id\"].unique(), type='card_id')\n",
+    "G.add_nodes_from(df[\"Merchant Name\"].unique(), type='merchant_name')"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "e8a9cf65",
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e2469e8c",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['8000EBD30', '8000F4580', '8000F4670', ..., '811375C10',\n",
+       "       '8148A6631', '8148A8671'], dtype=object)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df[\"Account\"].unique()"
    ]
@@ -811,12 +838,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "e657464f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for _, row in df.iterrows():\n",
+    "for _, row in df_temp.iterrows():\n",
     "    # Create a variable for each properties for each edge\n",
     "    \n",
     "        year = row[\"Year\"],\n",
@@ -837,10 +864,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "b21c0b21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of nodes: 8330\n",
+      "Number of edges: 10000\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the number of nodes and edges in the graph\n",
     "num_nodes = G.number_of_nodes()\n",
@@ -853,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "bfa41530",
    "metadata": {},
    "outputs": [],
@@ -864,20 +900,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "150ab6c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8330, 8330)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "adj_matrix.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "36b682b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'8000EBD30'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[52], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[39m# Print the properties of the sample nodes\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[39mfor\u001b[39;00m node \u001b[39min\u001b[39;00m sample_nodes:\n\u001b[0;32m----> 9\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNode: \u001b[39m\u001b[39m{\u001b[39;00mnode\u001b[39m}\u001b[39;00m\u001b[39m, Properties: \u001b[39m\u001b[39m{\u001b[39;00mnode_properties[node]\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: '8000EBD30'"
+     ]
+    }
+   ],
    "source": [
     "# Get a small sample of the nodes in the graph\n",
     "sample_nodes = list(G.nodes())[:10]\n",
@@ -892,10 +951,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "a65bdf15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: {'year': (2022,), 'month': (9,), 'day': (1,), 'hour': (0,), 'minute': (20,), 'amount_paid': (3697.34,), 'currency_code': ('USD',), 'payment_format': 'Reinvestment'}}\n",
+      "{0: {'year': (2022,), 'month': (9,), 'day': (1,), 'hour': (0,), 'minute': (20,), 'amount_paid': (0.01,), 'currency_code': ('USD',), 'payment_format': 'Cheque'}}\n",
+      "{0: {'year': (2022,), 'month': (9,), 'day': (1,), 'hour': (0,), 'minute': (0,), 'amount_paid': (14675.57,), 'currency_code': ('USD',), 'payment_format': 'Reinvestment'}}\n",
+      "{0: {'year': (2022,), 'month': (9,), 'day': (1,), 'hour': (0,), 'minute': (2,), 'amount_paid': (2806.97,), 'currency_code': ('USD',), 'payment_format': 'Reinvestment'}}\n",
+      "{0: {'year': (2022,), 'month': (9,), 'day': (1,), 'hour': (0,), 'minute': (6,), 'amount_paid': (36682.97,), 'currency_code': ('USD',), 'payment_format': 'Reinvestment'}}\n"
+     ]
+    }
+   ],
    "source": [
     "sample_size = 5\n",
     "for i, edge in enumerate(G.edges()):\n",
