--- a/ml_logic/malte_test_packeging.ipynb
+++ b/ml_logic/malte_test_packeging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Number of nodes: 77492\n",
+      "✅ Number of nodes: 77414\n",
       "✅ Number of edges: 51770\n"
      ]
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,24 +104,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, Loss: 31349032.0\n",
-      "Epoch: 20, Loss: 1641036.0\n",
-      "Epoch: 40, Loss: 1361407.375\n",
-      "Epoch: 60, Loss: 56396.95703125\n",
-      "Epoch: 80, Loss: 1305078.0\n",
-      "Epoch: 100, Loss: 196296.796875\n",
-      "Epoch: 120, Loss: 237728.484375\n",
-      "Epoch: 140, Loss: 1392649.5\n",
-      "Epoch: 160, Loss: 849623.875\n",
-      "Epoch: 180, Loss: 31011.03125\n",
-      "Epoch: 200, Loss: 367722.4375\n"
+      "Epoch: 0, Loss: 12013392.0\n",
+      "Epoch: 20, Loss: 346025.25\n",
+      "Epoch: 40, Loss: 656085.5\n",
+      "Epoch: 60, Loss: 1644322.875\n",
+      "Epoch: 80, Loss: 573492.9375\n",
+      "Epoch: 100, Loss: 313183.4375\n",
+      "Epoch: 120, Loss: 21301.798828125\n",
+      "Epoch: 140, Loss: 334518.46875\n",
+      "Epoch: 160, Loss: 2048.93212890625\n",
+      "Epoch: 180, Loss: 293497.40625\n",
+      "Epoch: 200, Loss: 510855.9375\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -141,11 +141,12 @@
      "output_type": "stream",
      "text": [
       "✅ Model evaluated\n",
-      "accuracy: 0.8393857479095459\n",
-      "precision: 0.12187812477350235\n",
-      "recall: 0.1346578299999237\n",
-      "f1: 0.12794965505599976\n",
-      "auroc: 0.520811140537262\n"
+      "accuracy: 0.8926984667778015\n",
+      "precision: 0.05094905197620392\n",
+      "recall: 0.24056604504585266\n",
+      "f1: 0.08408903330564499\n",
+      "auroc: 0.5734480619430542\n",
+      "0.8926984667778015\n"
      ]
     }
    ],
@@ -155,21 +156,23 @@
     "\n",
     "binary_predictions = predict(model,test_x)\n",
     "\n",
-    "result = evaluate_model(test_target, binary_predictions)"
+    "result = evaluate_model(test_target, binary_predictions)\n",
+    "\n",
+    "print (result[0].item())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0, 1, 0,  ..., 0, 0, 0], dtype=torch.int32)"
+       "tensor([0, 0, 0,  ..., 0, 0, 0], dtype=torch.int32)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
