--- a/api_test.ipynb
+++ b/api_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,24 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'date' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m url \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mhttps://api.apilayer.com/exchangerates_data/\u001b[39m\u001b[39m{\u001b[39;00mdate\u001b[39m}\u001b[39;00m\u001b[39m?symbols=\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(currency_codes)\u001b[39m}\u001b[39;00m\u001b[39m&base=USD\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[39m# Define the headers\u001b[39;00m\n\u001b[1;32m      4\u001b[0m headers \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39mapikey\u001b[39m\u001b[39m\"\u001b[39m: api_key}\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'date' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    " # Exchange rate data api key\n",
-    "api_key = \"wdiQOxfDckJMZr70O1Brmvlh56iJEfE7\"\n",
+    "# Exchange rate data api key\n",
+    "api_key = \"RPKnKVqfveUOzhUR9Ir8Nqq6HA5DI0md\"\n",
     "\n",
     "# Arbitrary date to fetch the exchange rates\n",
     "date = \"2022-09-30\"\n",
@@ -46,6 +34,44 @@
     "\n",
     "# Convert the response to JSON\n",
     "data = response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'success': True,\n",
+       " 'timestamp': 1664582399,\n",
+       " 'historical': True,\n",
+       " 'base': 'USD',\n",
+       " 'date': '2022-09-30',\n",
+       " 'rates': {'GBP': 0.896861,\n",
+       "  'EUR': 1.01991,\n",
+       "  'AUD': 1.561524,\n",
+       "  'BTC': 5.1467053e-05,\n",
+       "  'BRL': 5.412471,\n",
+       "  'CAD': 1.38327,\n",
+       "  'MXN': 20.14615,\n",
+       "  'RUB': 60.20369,\n",
+       "  'INR': 81.638404,\n",
+       "  'SAR': 3.756801,\n",
+       "  'ILS': 3.55854,\n",
+       "  'CHF': 0.987171,\n",
+       "  'JPY': 144.73904,\n",
+       "  'CNY': 7.116041}}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   },
   {
