--- a/daniel_workflow.ipynb
+++ b/daniel_workflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,31 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ data received\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'rates'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m df \u001b[39m=\u001b[39m get_data_local(size\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mSmall\u001b[39m\u001b[39m\"\u001b[39m, fraud\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mHI\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m df \u001b[39m=\u001b[39m clean_data(df)\n\u001b[1;32m      5\u001b[0m df \u001b[39m=\u001b[39m data_reduction(df, \u001b[39m0.5\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[39m########################### OR ###########################\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \n\u001b[1;32m      9\u001b[0m \u001b[39m# size=\"Medium\"\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     37\u001b[0m \n\u001b[1;32m     38\u001b[0m \u001b[39m########################### THEN ###########################\u001b[39;00m\n",
-      "File \u001b[0;32m~/code/Malvinrud/aml_detector/ml_logic/data.py:100\u001b[0m, in \u001b[0;36mclean_data\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m     97\u001b[0m data \u001b[39m=\u001b[39m response\u001b[39m.\u001b[39mjson()\n\u001b[1;32m     99\u001b[0m \u001b[39m# Create a DataFrame from the rates\u001b[39;00m\n\u001b[0;32m--> 100\u001b[0m df_rates \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(data[\u001b[39m'\u001b[39;49m\u001b[39mrates\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39mitems(), columns\u001b[39m=\u001b[39m[\u001b[39m'\u001b[39m\u001b[39mcurrency_code\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mrate\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m    102\u001b[0m \u001b[39m# Merge df with df_rates on 'Currency Code', preserving all rows from df and filling in NaN for missing match\u001b[39;00m\n\u001b[1;32m    103\u001b[0m df \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mmerge(df_rates, on\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mcurrency_code\u001b[39m\u001b[39m'\u001b[39m, how\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mleft\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'rates'"
+      "✅ data received\n",
+      "{'success': True, 'timestamp': 1664582399, 'historical': True, 'base': 'USD', 'date': '2022-09-30', 'rates': {'GBP': 0.896861, 'EUR': 1.01991, 'AUD': 1.561524, 'BTC': 5.1467053e-05, 'BRL': 5.412471, 'CAD': 1.38327, 'MXN': 20.14615, 'RUB': 60.20369, 'INR': 81.638404, 'SAR': 3.756801, 'ILS': 3.55854, 'CHF': 0.987171, 'JPY': 144.73904, 'CNY': 7.116041}}\n",
+      "✅ data cleaned\n",
+      "✅ randomly removed 28762393 non-fraudulent rows from the data frame.\n"
      ]
     }
    ],
    "source": [
-    "df = get_data_local(size=\"Small\", fraud=\"HI\")\n",
+    "df = get_data_local(size=\"Medium\", fraud=\"HI\")\n",
     "\n",
     "df = clean_data(df)\n",
     "\n",
@@ -45,7 +36,7 @@
     "\n",
     "########################### OR ###########################\n",
     "\n",
-    "# size=\"Medium\"\n",
+    "# size=\"Large\"\n",
     "# fraud=\"HI\"\n",
     "\n",
     "# file = f'raw_data/{fraud}-{size}_Trans.csv'\n",
@@ -86,25 +77,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56368"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Daniel/.pyenv/versions/3.10.6/envs/aml_detector/lib/python3.10/site-packages/sklearn/preprocessing/_encoders.py:868: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/Users/Daniel/.pyenv/versions/3.10.6/envs/aml_detector/lib/python3.10/site-packages/sklearn/preprocessing/_encoders.py:868: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/Users/Daniel/.pyenv/versions/3.10.6/envs/aml_detector/lib/python3.10/site-packages/sklearn/preprocessing/_encoders.py:868: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/Users/Daniel/.pyenv/versions/3.10.6/envs/aml_detector/lib/python3.10/site-packages/sklearn/preprocessing/_encoders.py:868: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/Users/Daniel/.pyenv/versions/3.10.6/envs/aml_detector/lib/python3.10/site-packages/sklearn/preprocessing/_encoders.py:868: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n",
+      "/Users/Daniel/.pyenv/versions/3.10.6/envs/aml_detector/lib/python3.10/site-packages/sklearn/preprocessing/_encoders.py:868: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ data One-Hot-Encoded\n",
+      "✅ data One-Hot-Encoded\n",
+      "✅ Number of nodes: 88091\n",
+      "✅ Number of edges: 56368\n",
+      "✅ Number of nodes: 24415\n",
+      "✅ Number of edges: 14092\n",
+      "✅ x created\n",
+      "✅ target created\n",
+      "✅ x created\n",
+      "✅ target created\n",
+      "Epoch: 0, Loss: 87926576.0\n",
+      "Epoch: 20, Loss: 2550878.25\n",
+      "Epoch: 40, Loss: 2560598.75\n",
+      "Epoch: 60, Loss: 1283847.5\n",
+      "Epoch: 80, Loss: 979164.25\n",
+      "Epoch: 100, Loss: 5435630.5\n",
+      "Epoch: 120, Loss: 2657549.75\n",
+      "Epoch: 140, Loss: 347709.0625\n",
+      "Epoch: 160, Loss: 259537.609375\n",
+      "Epoch: 180, Loss: 44161.42578125\n",
+      "Epoch: 200, Loss: 709856.875\n"
+     ]
+    }
+   ],
    "source": [
     "model, X_test_tensor, y_test_tensor = model_workflow(X, X_test, y, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,9 +161,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Model evaluated\n",
+      "accuracy: 0.4946068823337555\n",
+      "precision: 0.4920273423194885\n",
+      "recall: 0.5243467092514038\n",
+      "f1: 0.5076731443405151\n",
+      "auroc: 0.4947872757911682\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0.4946),\n",
+       " tensor(0.4920),\n",
+       " tensor(0.5243),\n",
+       " tensor(0.5077),\n",
+       " tensor(0.4948))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "evaluate_model(y_pred, y_test_tensor)"
    ]
